EWPP-2845: Add additional Url validation and update tests.

--- a/config/validator/request.yaml
+++ b/config/validator/request.yaml
@@ -304,5 +304,6 @@ OpenEuropa\EPoetry\Request\Type\UpdateCallbackUrl:
     properties:
         callbackUrl:
             - NotBlank: ~
+            - Url: { protocols: [https] }
         applicationName:
             - NotBlank: ~
