Remove reference to actual users in tests.

--- a/tests/Request/fixtures/addNewPartToDossierRequest.yaml
+++ b/tests/Request/fixtures/addNewPartToDossierRequest.yaml
@@ -20,11 +20,11 @@ x-default-request-details: &default-request-details
                 trackChanges: false
     contacts:
         contact:
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: REQUESTER
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: AUTHOR
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: RECIPIENT
 
 x-default: &default
@@ -90,11 +90,11 @@ tests:
                 workflowCode: WEB
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: EDITOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
@@ -129,17 +129,17 @@ tests:
                 workflowCode: WEB
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: EDITOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
@@ -157,11 +157,11 @@ tests:
                 slaAnnex: ''
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: AUTHOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
@@ -266,11 +266,11 @@ tests:
                             trackChanges: true
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: REQUESTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: AUTHOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
