--- a/tests/Request/fixtures/createLinguisticRequest.yaml
+++ b/tests/Request/fixtures/createLinguisticRequest.yaml
@@ -15,11 +15,11 @@ x-default-request-details: &default-request-details
                 trackChanges: false
     contacts:
         contact:
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: REQUESTER
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: AUTHOR
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: RECIPIENT
 
 x-default: &default
@@ -83,11 +83,11 @@ tests:
                 workflowCode: WEB
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: EDITOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
@@ -122,17 +122,17 @@ tests:
                 workflowCode: WEB
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: EDITOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
@@ -150,11 +150,11 @@ tests:
                 slaAnnex: ''
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: AUTHOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
@@ -259,11 +259,11 @@ tests:
                             trackChanges: true
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: REQUESTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: AUTHOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
