--- a/tests/Request/fixtures/modifyLinguisticRequest.yaml
+++ b/tests/Request/fixtures/modifyLinguisticRequest.yaml
@@ -1,11 +1,11 @@
 x-default-request-details: &default-request-details
     contacts:
         contact:
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: REQUESTER
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: AUTHOR
-            -   userId: liekejo
+            -   userId: smithjo
                 contactRole: RECIPIENT
 
 x-default-dossier: &default-dossier
@@ -51,11 +51,11 @@ tests:
                 <<: *default-request-details
                 contacts:
                     contact:
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: WEBMASTER
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: EDITOR
-                        -   userId: liekejo
+                        -   userId: smithjo
                             contactRole: RECIPIENT
         expectations:
             assertions:
